# math4610

./: .gitignore  hw_toc.md
modules/: CMakeLists.txt
modules/doc/: 1_norm.md  1_norm_abserr.md  1_norm_relerr.md  2_norm.md  2_norm_abserr.md  2_norm_relerr.md  LectureNotes.txt  add_vector.md  bisect.md  bisect_newton.md  bisect_secant.md  cholesky_matrix.md  conjugate_gradient_matrix.md  cross_vector.md  diag_solver_matrix.md  dmaceps.md  dot_vector.md  errabs.md  errapr.md  errrel.md  fpi.md  guass_matrix.md  inf_norm.md  inf_norm_abserr.md  inf_norm_relerr.md  inverse_power_matrix.md  jacobi_solver_matrix.md  lower_matrix.md  lu_matrix.md  lu_solver_matrix.md  mul_vector.md  multi_bisect.md  multi_newton.md  multi_secant.md  newton.md  power_matrix.md  random_matrix.md  rref_matrix.md  saxpy_vector.md  scale_vector.md  (+6 more)
modules/include/: absolute_error.h  bisect.h  bisect_newton.h  bisect_secant.h  common_types.h  dmaceps.h  errabs.h  errapr.h  errrel.h  fpi.h  matrix.h  newton.h  secant.h  smaceps.h  vector_ops.h
modules/source/: dmaceps.cpp  errabs.cpp  errrel.cpp  smaceps.cpp
modules/test/: central_difference.cpp  main.cpp  matrix_test.cpp  openmp_demo.cpp  precision_test.cpp  root_finding.cpp  root_finding_2.cpp  sandbox.cpp  target_language.cpp
src/: CMakeLists.txt
tasksheets/: tasksheet_01.md  tasksheet_02.md  tasksheet_03.md  tasksheet_04.md  tasksheet_05.md  tasksheet_06.md  tasksheet_07.md  tasksheet_08.md
